<resources>
    <string name="app_name" translatable="false">Gym App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="sign_up">تسجيل حساب جديد</string>
    <string name="sign_in">تسجيل الدخول</string>
    <string name="name">الإسم</string>
    <string name="age">العمر</string>
    <string name="birth_date">تاريخ الميلاد</string>
    <string name="height">الطول</string>
    <string name="weight">الوزن</string>
    <string name="email">الإيمايل</string>
    <string name="phone">رقم الهاتف</string>
    <string name="password">كلمة المرور</string>
    <string name="address">العنوان</string>
    <string name="next">التالي</string>
    <string name="sign_in_to_join_us_and_achieve_your_dreams">إنضم إلينا و حقق أحلامك</string>
    <string name="next_session">الحصة القادمة</string>
    <string name="size">"الحجم: "</string>
    <string name="add_to_cart">اضف للسلة</string>
    <string name="call">اتصل</string>
    <string name="desciption">تفاصيل</string>
    <string name="amount">الكمية</string>
    <string name="Seggested_items_for_you">"منتجات قد تعجبك: "</string>
    <string name="example_text">"هذا النص البسيط عبارة عن مثال مبسط يقم بتمثيل الى اي درجة من النصوص قد تحتاج للعمل عليه كل رة عود لنفس النقطة مرار و تكرار  بضعف السرعة التي قد بدات  بها و الجميل في الامر انك قد تعجبك الفكرة اصلا تماما تماما  هذا النص البسيط عبارة عن مثال مبسط يقم بتمثيل الى اي درجة من النصوص قد تحتاج للعمل عليه كل رة عود لنفس النقطة مرار و تكرار  بضعف السرعة التي قد بدات  بها و الجميل في الامر انك قد تعجبك الفكرة اصلا تماما تماما "</string>
    <string name="body_building">"كمال أجسام "</string>
    <string name="weight_losing">خسارة الوزن</string>
    <string name="cardio">كارديو</string>
    <string name="cross_fit">كروس فيت</string>
    <string name="calisthenics">كاليسثانيكس</string>
    <string name="Your_Subscription">"إشتراكك: "</string>
    <string name="you_steel_have">"لا يزال لديك: "</string>
    <string name="there_are_no_sessions">لا يوجد أي حصص</string>
    <string name="you_attended">"لقد حضرت: "</string>
    <string name="nothing">لا شيئ</string>
    <string name="add_sessions">شحن الحصص</string>
    <string name="buy">شراء</string>
    <string name="time">الوقت</string>
    <string name="Attendance">الحضور</string>
    <string name="Subscription">الإشتراك</string>
    <string name="programs_for_you">"البرامج التدريبية: "</string>
    <string name="let_us_know_your_progress">احفظ تقدمك</string>
    <string name="submit">ارسال</string>
    <string name="sellect_Montly_Plan">اختر الخطة الشهرية</string>
    <string name="montly">شهريا</string>
    <string name="yearly">سنويا</string>
    <string name="Get_started_today">ابدء اليوم</string>
    <string name="Get_3_monthes_for_free">احصل على ثلاث أشهر مجانا</string>
    <string name="sellect_Yearly_Plan">اختر الخطة السنوية</string>
    <string name="profile_info">معلومات الحساب: </string>
    <string name="about_app">حول التطبيق: </string>
    <string name="rate_the_app">قيم تطبيقنا</string>
    <string name="termes_and_condition">سياستنا الخصوصية و الشروط</string>
    <string name="version">الإصدار:    1.0.0</string>
    <string name="charge_account">تعبئة الحساب</string>
    <string name="Your_purchases">مشترياتك</string>
    <string name="notes">ملاحظات</string>
    <string name="done">تم</string>
    <string name="left">متبقية</string>
    <string name="select_days_you_want">اختر الايام التي ستحضر فيها</string>
    <string name="galery">"المعرض: "</string>
    <string name="call_me">اتصل بي</string>
    <string name="store">المتجر</string>
    <string name="you_did_not_sign_in_yet">عضو جديد؟ يمكنك التسجيل عبر الزر في الأسفل. او تسجيل الدخول اسفله. كما يمكنك زيارة المتجر دون الحاجة لكليهما.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">تسجيل الخروج</string>
    <string name="reset_password">reset Password</string>
    <string name="empty_layout">لا يوجد اي شيئ هنا ☺</string>
    <string name="dips">Dips</string>
    <string name="pull_ups">عقلة</string>
    <string name="push_ups">ضغط</string>
    <string name="devs">المطورون</string>
</resources>
