<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_3"
    tools:context=".Activity.SignInActivity">


    <Button
        android:id="@+id/sign_up_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/ic_button_background"
        android:onClick="open"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birth_date_up" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Email:"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/last_name_up"
        app:layout_constraintStart_toStartOf="@+id/birth_date_up" />

    <EditText
        android:id="@+id/last_name_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:background="@drawable/ic_email_blank"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="@+id/birth_date_up"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/birth_date_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="336dp"
        android:background="@drawable/ic_email_blank"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Password:"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/birth_date_up"
        app:layout_constraintStart_toStartOf="@+id/birth_date_up" />

    <Button
        android:id="@+id/open_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_button_background"
        android:backgroundTint="#fff"
        android:onClick="openSignUp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_button2"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button2"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="@color/colorPrimary"
        android:shadowDx="2"
        android:shadowDy="2"
        android:text="@string/sign_in_to_join_us_and_achieve_your_dreams"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/last_name_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/birth_date_up" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="280dp"
        android:layout_height="404dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>