<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Fragments.SelectingSessionFragment">

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
        android:id="@+id/calendar_view_selecting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@+id/leftDays"
        app:mcv_arrowColor="@color/colorPrimaryDark"
        app:mcv_dateTextAppearance="@style/TextAppearance.AppCompat.Body2"
        app:mcv_selectionColor="@color/colorAccent"
        app:mcv_showOtherDates="all">


    </com.prolificinteractive.materialcalendarview.MaterialCalendarView>

    <TextView
        android:id="@+id/leftDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:shadowColor="@color/colorPrimary"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="TextView"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/textView28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/select_days_you_want"
        android:textColor="@color/colorPrimaryDark"

        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/colorPrimary"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/left"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/leftDays"
        app:layout_constraintTop_toTopOf="@+id/leftDays" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@drawable/ic_profile_caption"
        android:backgroundTint="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/calendar_view_selecting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/calendar_view_selecting" />

    <Button
        android:id="@+id/slecttingPayButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_button_background"
        android:text="@string/done"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/slecttingPayButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/slecttingPayButton2"
        app:layout_constraintTop_toTopOf="@+id/slecttingPayButton2" />

    <Button
        android:id="@+id/slecttingPayButton2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_button_background"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/notes"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/slecttingPayButton"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
